@@ -1,0 +1,8 @@
+domain-py-smart_reference
+=========================
+
+.. py:class:: Name
+   :module: foo
+
+
+.. py:function:: hello(name: foo.Name, age: foo.Age)
